# hoplite

./: .gitignore  Cargo.toml  FEATURES.md  README.md
examples/: black_hole.rs  scenes.rs  seated.rs  sphere.rs  stl_loader.rs
examples/assets/models/: chess.stl
examples/shaders/: black_hole.wgsl  gravitational_lensing.wgsl  sphere.wgsl
src/: app.rs  assets.rs  camera.rs  draw2d.rs  ecs.rs  effect_pass.rs  freelook_camera.rs  fullscreen.wgsl  geometry.rs  gpu.rs  hot_shader.rs  input.rs  lib.rs  main.rs  mesh.rs  mesh_pass.rs  orbit_camera.rs  picking.rs  post_process.rs  render_graph.rs  scene_projection.rs  texture.rs  ui.rs
src/render_graph/: effect_nodes.rs  graph.rs  mesh_queue.rs  mod.rs  post_process_nodes.rs  render_node.rs  render_target.rs
src/scene/: manager.rs  mod.rs  scene.rs  setup.rs  transition.rs  transition_pass.rs
src/shaders/: blit.wgsl  draw2d.wgsl  mesh.wgsl  sphere.wgsl  ui.wgsl
